--- a/index.html
+++ b/index.html
@@ -9,72 +9,26 @@
 body{font-family:Arial;background:#f2f2f2;margin:0}
 header{background:#4CAF50;color:#fff;padding:10px}
 #topMenu{display:flex;justify-content:space-between;align-items:center}
-#userStatus{font-size:13px;white-space:nowrap;overflow-x:auto}
-.status{margin-right:8px}
-.online{color:#b6ffb6}
-.offline{color:#eee}
+#userStatus{font-size:14px}
+.status{margin-right:10px}
+.online{color:#aaffaa}
+.offline{color:#ddd}
 
-#login,#chat{
-  display:flex;
-  flex-direction:column;
-  height:calc(100vh - 70px);
-  margin:10px;
-  background:#fff;
-  border-radius:8px;
-  padding:10px
-}
+#login,#chat{display:flex;flex-direction:column;height:calc(100vh - 70px);margin:10px;background:#fff;border-radius:8px;padding:10px}
 #chat{display:none}
 
-input,button{
-  padding:10px;
-  font-size:16px;
-  border-radius:8px;
-  border:1px solid #ccc
-}
-button{
-  background:#4CAF50;
-  color:#fff;
-  border:none
-}
+input,button{padding:10px;font-size:16px;border-radius:8px;border:1px solid #ccc}
+button{background:#4CAF50;color:#fff;border:none;cursor:pointer}
 
-#messages{
-  flex:1;
-  border:1px solid #ddd;
-  padding:8px;
-  overflow-y:auto;
-  margin-bottom:8px
-}
-.msg{
-  margin-bottom:6px;
-  padding:6px 10px;
-  border-radius:6px;
-  background:#eee;
-  max-width:80%
-}
-.me{
-  background:#c8f7c5;
-  margin-left:auto;
-  text-align:right
-}
-.system{
-  text-align:center;
-  font-style:italic;
-  color:#666;
-  background:none
-}
-.meta{
-  font-size:.75em;
-  color:#666
-}
-img,audio{
-  max-width:200px;
-  margin-top:6px
-}
+#messages{flex:1;border:1px solid #ddd;padding:8px;overflow-y:auto;margin-bottom:8px}
+.msg{margin-bottom:6px;padding:6px 10px;border-radius:6px;background:#eee}
+.me{background:#c8f7c5;text-align:right}
+.system{text-align:center;font-style:italic;color:#666;background:none}
+.meta{font-size:.75em;color:#666}
+img{max-width:200px;border-radius:6px;margin-top:6px}
+audio{margin-top:6px;width:200px}
 
-.controls{
-  display:flex;
-  gap:6px
-}
+.controls{display:flex;gap:6px}
 </style>
 </head>
 
@@ -88,21 +42,21 @@ img,audio{
 </header>
 
 <div id="login">
-  <h3>Ingresa tu nombre</h3>
-  <input id="username" placeholder="Tu nombre">
-  <button id="enterBtn">Entrar</button>
+<h3>Ingresa tu nombre</h3>
+<input id="username" placeholder="Tu nombre">
+<button id="enterBtn">Entrar</button>
 </div>
 
 <div id="chat">
-  <div id="messages"></div>
+<div id="messages"></div>
 
-  <div class="controls">
-    <input id="text" placeholder="Escribe un mensaje" style="flex:1">
-    <input type="file" id="photoInput" accept="image/*" hidden>
-    <button id="photoBtn">📷</button>
-    <button id="recordBtn">🎤</button>
-    <button id="sendBtn">➤</button>
-  </div>
+<div class="controls">
+<input id="text" placeholder="Escribe un mensaje" style="flex:1">
+<input type="file" id="photoInput" accept="image/*" hidden>
+<button onclick="photoInput.click()">📷</button>
+<button id="recordBtn">🎤</button>
+<button id="sendBtn">Enviar</button>
+</div>
 </div>
 
 <!-- Firebase -->
@@ -111,125 +65,128 @@ img,audio{
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
 <script>
-/* CONFIG */
-firebase.initializeApp({
-  apiKey:"AIzaSyAEkdn1nVDbrJEQY13JrE-peN1JkXrOy24",
-  databaseURL:"https://wilschat-1b27d-default-rtdb.firebaseio.com",
-  projectId:"wilschat-1b27d",
-  storageBucket:"wilschat-1b27d.appspot.com"
-});
+var firebaseConfig={
+apiKey:"AIzaSyAEkdn1nVDbrJEQY13JrE-peN1JkXrOy24",
+authDomain:"wilschat-1b27d.firebaseapp.com",
+databaseURL:"https://wilschat-1b27d-default-rtdb.firebaseio.com",
+projectId:"wilschat-1b27d",
+storageBucket:"wilschat-1b27d.appspot.com",
+messagingSenderId:"550632985900",
+appId:"1:550632985900:web:c886e89b4330560b6ac889"
+};
+firebase.initializeApp(firebaseConfig);
 
-const db=firebase.database();
-const st=firebase.storage();
-let user="",presenceRef=null;
+var db=firebase.database();
+var storage=firebase.storage();
+var user="";
+var presenceKey=null;
 
-/* UTIL */
-const time=t=>new Date(t).toLocaleTimeString();
+function time(ts){return new Date(ts).toLocaleTimeString()}
 
-/* MENSAJES */
 function addMsg(m){
-  const d=document.createElement("div");
-  d.className="msg"+(m.user===user?" me":"");
-
-  if(m.system){
-    d.className="system";
-    d.textContent=m.text+" — "+time(m.ts);
-  }else if(m.type==="image"){
-    d.innerHTML=`<strong>${m.user}:</strong><br><img src="${m.url}">`;
-  }else if(m.type==="audio"){
-    d.innerHTML=`<strong>${m.user}:</strong><br><audio controls src="${m.url}"></audio>`;
-  }else{
-    d.innerHTML=`<strong>${m.user}:</strong> ${m.text}`;
-  }
-
-  if(m.user===user){
-    d.onclick=()=>confirm("¿Eliminar mensaje?")&&db.ref("mensajes/"+m.key).remove();
-  }
-
-  messages.appendChild(d);
-  messages.scrollTop=messages.scrollHeight;
+var div=document.createElement("div");
+div.className="msg"+(m.user===user?" me":"");
+if(m.system){
+div.className+=" system";
+div.textContent=m.text+" — "+time(m.ts);
+messages.appendChild(div);return;
+}
+div.innerHTML="<strong>"+m.user+":</strong> ";
+if(m.type==="image"){
+var i=document.createElement("img");i.src=m.url;div.appendChild(i);
+}else if(m.type==="audio"){
+var a=document.createElement("audio");a.controls=true;a.src=m.url;div.appendChild(a);
+}else{
+div.innerHTML+=" "+m.text;
+}
+var meta=document.createElement("div");
+meta.className="meta";meta.textContent=time(m.ts);
+div.appendChild(meta);
+messages.appendChild(div);
+messages.scrollTop=messages.scrollHeight;
 }
 
-/* ENTRAR */
-enterBtn.onclick=()=>{
-  if(!username.value.trim())return;
-  user=username.value.trim();
-  login.style.display="none";
-  chat.style.display="flex";
+enterBtn.onclick=function(){
+if(!username.value.trim())return;
+user=username.value.trim();
+login.style.display="none";
+chat.style.display="flex";
 
-  db.ref("users/"+user).set({name:user});
-  presenceRef=db.ref("presence").push({name:user});
-  presenceRef.onDisconnect().remove();
+/* Guardar usuario */
+db.ref("users/"+user).set({name:user,lastSeen:Date.now()});
 
-  db.ref("mensajes").push({system:true,text:user+" entró al chat",ts:Date.now()});
+/* Presencia */
+var ref=db.ref("presence").push({name:user});
+presenceKey=ref.key;
+ref.onDisconnect().remove();
+
+db.ref("mensajes").push({system:true,text:user+" entró al chat",ts:Date.now()});
 };
 
-/* ENVIAR */
-sendBtn.onclick=()=>{
-  if(!text.value.trim())return;
-  db.ref("mensajes").push({user,text:text.value,ts:Date.now()});
-  text.value="";
+sendBtn.onclick=function(){
+if(!text.value.trim())return;
+db.ref("mensajes").push({user:user,text:text.value,ts:Date.now()});
+text.value="";
 };
 
-/* RECIBIR */
 db.ref("mensajes").limitToLast(200).on("child_added",s=>{
-  const m=s.val(); if(!m)return;
-  m.key=s.key;
-  addMsg(m);
+if(s.val())addMsg(s.val());
 });
 
-/* FOTO */
-photoBtn.onclick=()=>photoInput.click();
-photoInput.onchange=e=>{
-  const f=e.target.files[0]; if(!f)return;
-  const r=st.ref("photos/"+Date.now()+f.name);
-  r.put(f).then(s=>s.ref.getDownloadURL().then(u=>{
-    db.ref("mensajes").push({user,type:"image",url:u,ts:Date.now()});
-  }));
+/* Fotos */
+photoInput.onchange=function(e){
+var f=e.target.files[0];if(!f)return;
+var r=storage.ref("photos/"+Date.now()+f.name);
+r.put(f).then(s=>s.ref.getDownloadURL().then(u=>{
+db.ref("mensajes").push({user:user,type:"image",url:u,ts:Date.now()});
+}));
 };
 
-/* AUDIO */
+/* Audio */
 let rec,chunks=[];
 recordBtn.onclick=async function(){
-  if(!rec||rec.state==="inactive"){
-    const stream=await navigator.mediaDevices.getUserMedia({audio:true});
-    rec=new MediaRecorder(stream); chunks=[];
-    rec.ondataavailable=e=>chunks.push(e.data);
-    rec.onstop=()=>{
-      const b=new Blob(chunks,{type:"audio/webm"});
-      const r=st.ref("audios/"+Date.now()+".webm");
-      r.put(b).then(s=>s.ref.getDownloadURL().then(u=>{
-        db.ref("mensajes").push({user,type:"audio",url:u,ts:Date.now()});
-      }));
-    };
-    rec.start(); this.textContent="⏹️";
-  }else{
-    rec.stop(); this.textContent="🎤";
-  }
+if(!rec||rec.state==="inactive"){
+var st=await navigator.mediaDevices.getUserMedia({audio:true});
+rec=new MediaRecorder(st);chunks=[];
+rec.ondataavailable=e=>chunks.push(e.data);
+rec.onstop=()=>{
+var b=new Blob(chunks,{type:"audio/webm"});
+var r=storage.ref("audios/"+Date.now()+".webm");
+r.put(b).then(s=>s.ref.getDownloadURL().then(u=>{
+db.ref("mensajes").push({user:user,type:"audio",url:u,ts:Date.now()});
+}));
+};
+rec.start();this.textContent="⏹️";
+}else{rec.stop();this.textContent="🎤";}
 };
 
-/* ONLINE / OFFLINE */
+/* MENÚ SUPERIOR: ONLINE / OFFLINE */
 function updateUsers(){
-  Promise.all([
-    db.ref("users").once("value"),
-    db.ref("presence").once("value")
-  ]).then(([u,p])=>{
-    const on=[];
-    p.forEach(c=>on.push(c.val().name));
-    let h="";
-    u.forEach(c=>{
-      const n=c.key;
-      h+=on.includes(n)
-        ?`<span class="status online">🟢 ${n}</span>`
-        :`<span class="status offline">⚪ ${n}</span>`;
-    });
-    userStatus.innerHTML=h;
-  });
+Promise.all([
+db.ref("users").once("value"),
+db.ref("presence").once("value")
+]).then(([u,p])=>{
+var online=[];
+p.forEach(c=>online.push(c.val().name));
+var html="";
+u.forEach(c=>{
+var n=c.key;
+if(online.includes(n)){
+html+=`<span class="status online">🟢 ${n}</span>`;
+}else{
+html+=`<span class="status offline">⚪ ${n}</span>`;
 }
+});
+userStatus.innerHTML=html;
+});
+}
+
 db.ref("presence").on("value",updateUsers);
 db.ref("users").on("value",updateUsers);
-</script>
 
+window.addEventListener("beforeunload",()=>{
+if(user)db.ref("users/"+user+"/lastSeen").set(Date.now());
+});
+</script>
 </body>
 </html>
-<!-- deploy fix -->
