--- a/index.html
+++ b/index.html
@@ -7,13 +7,117 @@
 
 <style>
 body{font-family:Arial;background:#f2f2f2;margin:0}
-header{background:#4CAF50;color:#fff;padding:10px}
+header{background:#4CAF50;color:#fff;padding:10px;position:relative;z-index:10}
 #topMenu{display:flex;justify-content:space-between;align-items:center}
-#userStatus{font-size:14px}
-.status{margin-right:10px}
-.online{color:#aaffaa}
-.offline{color:#ddd}
 
+/* Botón Chat Online */
+#chatMenuBtn{
+  cursor:pointer;
+  visibility:hidden;
+  position:relative;
+  padding:6px 12px;
+  background:#388E3C;
+  border-radius:6px;
+  color:#fff;
+  font-weight:bold;
+}
+
+/* Ventana flotante estilo Messenger */
+#chatMenuWindow{
+  display:none;
+  position:absolute;
+  top:50px;
+  right:10px;
+  width:260px;
+  max-height:350px;
+  background:#fff;
+  box-shadow:0 4px 12px rgba(0,0,0,0.3);
+  border-radius:10px;
+  overflow:hidden;
+  z-index:100;
+  display:flex;
+  flex-direction:column;
+}
+
+/* Cabecera */
+#chatMenuHeader{
+  background:#4CAF50;
+  color:#fff;
+  padding:10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  font-weight:bold;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+}
+#chatMenuHeader button{
+  background:transparent;
+  border:none;
+  color:#fff;
+  font-size:16px;
+  cursor:pointer;
+}
+
+/* Contenido usuarios con scroll */
+#chatUsers{
+  flex:1;
+  overflow-y:auto;
+  padding:5px 10px;
+  background:#f9f9f9;
+}
+
+/* Usuario online con animación */
+.user-item{
+  display:flex;
+  align-items:center;
+  padding:6px 8px;
+  margin-bottom:6px;
+  border-radius:6px;
+  transition:background 0.2s, transform 0.3s, opacity 0.3s, box-shadow 0.5s;
+  opacity:0;
+  transform:translateY(-10px);
+}
+.user-item.show{
+  opacity:1;
+  transform:translateY(0);
+}
+.user-item.enter{
+  box-shadow: 0 0 10px rgba(0,255,0,0.7);
+  transition: box-shadow 1s ease-out, opacity 0.3s, transform 0.3s;
+}
+.user-item.exit{
+  box-shadow: 0 0 10px rgba(255,0,0,0.7);
+  opacity:0;
+  transform:translateY(-10px);
+  transition: box-shadow 0.5s ease-out, opacity 0.5s, transform 0.5s;
+}
+.user-item:hover{background:#e6f7e6;}
+.avatar{
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#fff;
+  font-weight:bold;
+  margin-right:10px;
+  flex-shrink:0;
+  position:relative;
+}
+.status-dot{
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  position:absolute;
+  bottom:0;
+  right:0;
+  border:2px solid #fff;
+}
+.typing{font-style:italic;color:#666;margin-left:5px;font-size:12px;}
+
+/* Chat y login */
 #login,#chat{display:flex;flex-direction:column;height:calc(100vh - 70px);margin:10px;background:#fff;border-radius:8px;padding:10px}
 #chat{display:none}
 
@@ -28,7 +132,28 @@ button{background:#4CAF50;color:#fff;border:none;cursor:pointer}
 img{max-width:200px;border-radius:6px;margin-top:6px}
 audio{margin-top:6px;width:200px}
 
-.controls{display:flex;gap:6px}
+/* Burbuja de notificación agrupada */
+#notifBubble{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#4CAF50;
+  color:#fff;
+  padding:10px 14px;
+  border-radius:20px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.3);
+  opacity:0;
+  transform:translateY(20px);
+  transition:opacity 0.4s, transform 0.4s;
+  pointer-events:none;
+  z-index:200;
+  max-width:280px;
+  word-break:break-word;
+}
+#notifBubble.show{
+  opacity:1;
+  transform:translateY(0);
+}
 </style>
 </head>
 
@@ -37,9 +162,17 @@ audio{margin-top:6px;width:200px}
 <header>
   <div id="topMenu">
     <strong>WilsChat</strong>
-    <div id="userStatus"></div>
+    <div id="chatMenuBtn">Chat Online ▼</div>
   </div>
 </header>
+
+<div id="chatMenuWindow">
+  <div id="chatMenuHeader">
+    Chat Online
+    <button id="closeChatWindow">✖</button>
+  </div>
+  <div id="chatUsers"></div>
+</div>
 
 <div id="login">
 <h3>Ingresa tu nombre</h3>
@@ -59,20 +192,22 @@ audio{margin-top:6px;width:200px}
 </div>
 </div>
 
-<!-- Firebase -->
+<div id="notifBubble"></div>
+<audio id="notifSound" src="https://www.soundjay.com/button/sounds/button-3.mp3" preload="auto"></audio>
+
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
 <script>
 var firebaseConfig={
-apiKey:"AIzaSyAEkdn1nVDbrJEQY13JrE-peN1JkXrOy24",
-authDomain:"wilschat-1b27d.firebaseapp.com",
-databaseURL:"https://wilschat-1b27d-default-rtdb.firebaseio.com",
-projectId:"wilschat-1b27d",
-storageBucket:"wilschat-1b27d.appspot.com",
-messagingSenderId:"550632985900",
-appId:"1:550632985900:web:c886e89b4330560b6ac889"
+  apiKey:"AIzaSyAEkdn1nVDbrJEQY13JrE-peN1JkXrOy24",
+  authDomain:"wilschat-1b27d.firebaseapp.com",
+  databaseURL:"https://wilschat-1b27d-default-rtdb.firebaseio.com",
+  projectId:"wilschat-1b27d",
+  storageBucket:"wilschat-1b27d.appspot.com",
+  messagingSenderId:"550632985900",
+  appId:"1:550632985900:web:c886e89b4330560b6ac889"
 };
 firebase.initializeApp(firebaseConfig);
 
@@ -81,113 +216,212 @@ var storage=firebase.storage();
 var user="";
 var presenceKey=null;
 
-function time(ts){return new Date(ts).toLocaleTimeString()}
+if("Notification" in window && Notification.permission!=="granted"){
+  Notification.requestPermission();
+}
 
+// ---- VARIABLES PARA NOTIFICACIONES AGRUPADAS ----
+let notifQueue = {};
+let notifTimeout = null;
+
+// ---- FUNCIONES ----
+function showGroupedNotification(userName,text){
+  // Agregar al grupo
+  if(notifQueue[userName]) notifQueue[userName]++;
+  else notifQueue[userName]=1;
+
+  // Preparar mensaje resumido
+  let parts=[];
+  for(let u in notifQueue){ parts.push(`${u} (${notifQueue[u]})`); }
+  let msg = parts.join(", ");
+
+  // Mostrar burbuja
+  let bubble = document.getElementById("notifBubble");
+  bubble.textContent = msg;
+  bubble.classList.add("show");
+  document.getElementById("notifSound").play();
+
+  // Reiniciar temporizador
+  clearTimeout(notifTimeout);
+  notifTimeout = setTimeout(()=>{
+    bubble.classList.remove("show");
+    notifQueue={};
+  },4000);
+}
+
+// Mensajes
 function addMsg(m){
-var div=document.createElement("div");
-div.className="msg"+(m.user===user?" me":"");
-if(m.system){
-div.className+=" system";
-div.textContent=m.text+" — "+time(m.ts);
-messages.appendChild(div);return;
-}
-div.innerHTML="<strong>"+m.user+":</strong> ";
-if(m.type==="image"){
-var i=document.createElement("img");i.src=m.url;div.appendChild(i);
-}else if(m.type==="audio"){
-var a=document.createElement("audio");a.controls=true;a.src=m.url;div.appendChild(a);
-}else{
-div.innerHTML+=" "+m.text;
-}
-var meta=document.createElement("div");
-meta.className="meta";meta.textContent=time(m.ts);
-div.appendChild(meta);
-messages.appendChild(div);
-messages.scrollTop=messages.scrollHeight;
+  var div=document.createElement("div");
+  div.className="msg"+(m.user===user?" me":"");
+  if(m.system){
+    div.className+=" system";
+    div.textContent=m.text+" — "+new Date(m.ts).toLocaleTimeString();
+    messages.appendChild(div);
+    return;
+  }
+  div.innerHTML="<strong>"+m.user+":</strong> ";
+  if(m.type==="image"){
+    var i=document.createElement("img"); i.src=m.url; div.appendChild(i);
+  }else if(m.type==="audio"){
+    var a=document.createElement("audio"); a.controls=true; a.src=m.url; div.appendChild(a);
+  }else{
+    div.innerHTML+=" "+m.text;
+  }
+  var meta=document.createElement("div");
+  meta.className="meta"; meta.textContent=new Date(m.ts).toLocaleTimeString();
+  div.appendChild(meta);
+  messages.appendChild(div);
+  messages.scrollTop=messages.scrollHeight;
+
+  // Notificación agrupada
+  if(m.user!==user && document.getElementById("chatMenuWindow").style.display==="none"){
+    showGroupedNotification(m.user,m.text);
+  }
+
+  // Notificación de escritorio
+  if(m.user!==user && document.hidden && Notification.permission==="granted"){
+    new Notification("WilsChat",{body:m.user+": "+m.text,icon:"https://cdn-icons-png.flaticon.com/512/733/733585.png"});
+  }
 }
 
+// ---- LOGIN ----
 enterBtn.onclick=function(){
-if(!username.value.trim())return;
-user=username.value.trim();
-login.style.display="none";
-chat.style.display="flex";
+  if(!username.value.trim()) return;
+  user=username.value.trim();
+  login.style.display="none";
+  chat.style.display="flex";
+  document.getElementById("chatMenuBtn").style.visibility="visible";
 
-/* Guardar usuario */
-db.ref("users/"+user).set({name:user,lastSeen:Date.now()});
+  db.ref("users/"+user).set({name:user,lastSeen:Date.now(),typing:false});
+  var ref=db.ref("presence").push({name:user});
+  presenceKey=ref.key;
+  ref.onDisconnect().remove();
 
-/* Presencia */
-var ref=db.ref("presence").push({name:user});
-presenceKey=ref.key;
-ref.onDisconnect().remove();
-
-db.ref("mensajes").push({system:true,text:user+" entró al chat",ts:Date.now()});
+  db.ref("mensajes").push({system:true,text:user+" entró al chat",ts:Date.now()});
 };
 
+// Enviar mensaje
 sendBtn.onclick=function(){
-if(!text.value.trim())return;
-db.ref("mensajes").push({user:user,text:text.value,ts:Date.now()});
-text.value="";
+  if(!text.value.trim()) return;
+  db.ref("mensajes").push({user:user,text:text.value,ts:Date.now()});
+  text.value="";
+  db.ref("users/"+user+"/typing").set(false);
 };
 
-db.ref("mensajes").limitToLast(200).on("child_added",s=>{
-if(s.val())addMsg(s.val());
+// Escribiendo
+text.addEventListener("input",()=>{
+  if(!user) return;
+  db.ref("users/"+user+"/typing").set(true);
+  setTimeout(()=>{if(user) db.ref("users/"+user+"/typing").set(false);},2000);
 });
 
-/* Fotos */
+// Fotos y audio
 photoInput.onchange=function(e){
-var f=e.target.files[0];if(!f)return;
-var r=storage.ref("photos/"+Date.now()+f.name);
-r.put(f).then(s=>s.ref.getDownloadURL().then(u=>{
-db.ref("mensajes").push({user:user,type:"image",url:u,ts:Date.now()});
-}));
+  var f=e.target.files[0]; if(!f) return;
+  var r=storage.ref("photos/"+Date.now()+f.name);
+  r.put(f).then(s=>s.ref.getDownloadURL().then(u=>{
+    db.ref("mensajes").push({user:user,type:"image",url:u,ts:Date.now()});
+  }));
 };
-
-/* Audio */
 let rec,chunks=[];
 recordBtn.onclick=async function(){
-if(!rec||rec.state==="inactive"){
-var st=await navigator.mediaDevices.getUserMedia({audio:true});
-rec=new MediaRecorder(st);chunks=[];
-rec.ondataavailable=e=>chunks.push(e.data);
-rec.onstop=()=>{
-var b=new Blob(chunks,{type:"audio/webm"});
-var r=storage.ref("audios/"+Date.now()+".webm");
-r.put(b).then(s=>s.ref.getDownloadURL().then(u=>{
-db.ref("mensajes").push({user:user,type:"audio",url:u,ts:Date.now()});
-}));
-};
-rec.start();this.textContent="⏹️";
-}else{rec.stop();this.textContent="🎤";}
-};
-
-/* MENÚ SUPERIOR: ONLINE / OFFLINE */
-function updateUsers(){
-Promise.all([
-db.ref("users").once("value"),
-db.ref("presence").once("value")
-]).then(([u,p])=>{
-var online=[];
-p.forEach(c=>online.push(c.val().name));
-var html="";
-u.forEach(c=>{
-var n=c.key;
-if(online.includes(n)){
-html+=`<span class="status online">🟢 ${n}</span>`;
-}else{
-html+=`<span class="status offline">⚪ ${n}</span>`;
-}
-});
-userStatus.innerHTML=html;
-});
+  if(!rec||rec.state==="inactive"){
+    var st=await navigator.mediaDevices.getUserMedia({audio:true});
+    rec=new MediaRecorder(st); chunks=[];
+    rec.ondataavailable=e=>chunks.push(e.data);
+    rec.onstop=()=>{
+      var b=new Blob(chunks,{type:"audio/webm"});
+      var r=storage.ref("audios/"+Date.now()+".webm");
+      r.put(b).then(s=>s.ref.getDownloadURL().then(u=>{
+        db.ref("mensajes").push({user:user,type:"audio",url:u,ts:Date.now()});
+      }));
+    };
+    rec.start(); this.textContent="⏹️";
+  }else{ rec.stop(); this.textContent="🎤"; }
 }
 
-db.ref("presence").on("value",updateUsers);
-db.ref("users").on("value",updateUsers);
+// Ventana flotante
+document.getElementById("chatMenuBtn").onclick=function(){
+  let win = document.getElementById("chatMenuWindow");
+  win.style.display = (win.style.display==="flex")?"none":"flex";
+}
+document.getElementById("closeChatWindow").onclick=function(){
+  document.getElementById("chatMenuWindow").style.display="none";
+}
+window.onclick=function(e){
+  let win = document.getElementById("chatMenuWindow");
+  if(!e.target.matches('#chatMenuBtn') && !win.contains(e.target)){
+    win.style.display="none";
+  }
+}
+
+// Actualizar usuarios
+function updateOnlineUsers(){
+  if(!user) return;
+  db.ref("presence").once("value").then(p=>{
+    let container=document.getElementById("chatUsers");
+    let existingUsers = {};
+    container.querySelectorAll(".user-item").forEach(el=>{
+      existingUsers[el.querySelector(".username").textContent] = el;
+    });
+
+    if(p.exists()){
+      p.forEach(c=>{
+        let name = c.val().name;
+        let initial = name.charAt(0).toUpperCase();
+        let color = stringToColor(name);
+
+        if(existingUsers[name]){
+          db.ref("users/"+name+"/typing").once("value").then(s=>{
+            let elTyping = existingUsers[name].querySelector(".typing");
+            if(elTyping) elTyping.textContent = s.val()? " escribiendo..." : "";
+          });
+          delete existingUsers[name];
+        }else{
+          let div = document.createElement("div");
+          div.className="user-item enter";
+          div.innerHTML=`<div class="avatar" style="background:${color}">${initial}<div class="status-dot" style="background:green"></div></div>
+                        <span class="username">${name}</span>
+                        <span class="typing" id="typing-${name}"></span>`;
+          container.appendChild(div);
+          setTimeout(()=>{div.classList.add("show");},50);
+          setTimeout(()=>{div.classList.remove("enter");},1000);
+        }
+      });
+    }
+
+    Object.values(existingUsers).forEach(el=>{
+      el.classList.add("exit");
+      setTimeout(()=>el.remove(),500);
+    });
+
+    if(container.childElementCount===0){
+      container.innerHTML="<div>No hay usuarios online</div>";
+    }
+  });
+}
+
+function stringToColor(str){
+  let hash=0;
+  for(let i=0;i<str.length;i++){hash=str.charCodeAt(i)+((hash<<5)-hash);}
+  let color="#";
+  for(let i=0;i<3;i++){
+    let value=(hash>>(i*8))&0xFF;
+    color+=("00"+value.toString(16)).substr(-2);
+  }
+  return color;
+}
+
+db.ref("presence").on("value",updateOnlineUsers);
+db.ref("users").on("value",updateOnlineUsers);
 
 window.addEventListener("beforeunload",()=>{
-if(user)db.ref("users/"+user+"/lastSeen").set(Date.now());
+  if(user) db.ref("users/"+user+"/lastSeen").set(Date.now());
+});
+
+db.ref("mensajes").limitToLast(200).on("child_added",s=>{
+  if(s.val()) addMsg(s.val());
 });
 </script>
 </body>
 </html>
-<!-- redeploy -->
