Add chat interface with message controls and emoji panel

--- a/index.html
+++ b/index.html
@@ -165,6 +165,18 @@ audio{margin-top:6px;width:200px}
     <div id="chatMenuBtn">Chat Online ▼</div>
   </div>
 </header>
+<div id="chat">
+  <div id="messages"></div>
+  <div class="controls">
+    <button id="emojiBtn">😀</button>
+    <input id="text" placeholder="Escribe un mensaje">
+    <button id="sendBtn">➤</button>
+  </div>
+</div>
+
+<div id="chatMenuWindow"></div>
+
+<div id="emojiPanel">😀 😁 😂 🤣 😍 😎 😭 😡 👍 ❤️ 🔥 🎉</div>
 
 <div id="chatMenuWindow">
   <div id="chatMenuHeader">
