--- a/index.html
+++ b/index.html
@@ -4,107 +4,67 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>WilsChat</title>
-
 <style>
-body{font-family:Arial;background:#f2f2f2;margin:0}
-header{background:#4CAF50;color:#fff;padding:10px}
-#topMenu{display:flex;justify-content:space-between;align-items:center}
-
-#chatMenuBtn{
-  cursor:pointer;
-  visibility:hidden;
-  padding:6px 12px;
-  background:#388E3C;
-  border-radius:6px;
-  color:#fff;
-  font-weight:bold
-}
-
-#chatMenuWindow{
-  display:none;
-  position:absolute;
-  top:50px;
-  right:10px;
-  width:260px;
-  max-height:350px;
+body{font-family:Arial;background:#f2f2f2;margin:0;padding:0;}
+header{background:#4CAF50;color:#fff;padding:12px 20px;display:flex;justify-content:space-between;align-items:center;box-shadow:0 2px 6px rgba(0,0,0,0.2);}
+#chatMenuBtn{cursor:pointer;padding:6px 12px;background:#388E3C;border-radius:6px;color:#fff;font-weight:bold;}
+#chatMenuWindow{position:fixed;top:70px;left:10px;width:240px;max-height:400px;overflow:auto;background:#fff;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.3);display:none;padding:12px;z-index:100;}
+.status{margin-right:5px;cursor:pointer;display:block;padding:4px 2px;}
+.online{color:#aaffaa;}
+.offline{color:#ddd;}
+#login,#chat{display:flex;flex-direction:column;height:calc(100vh - 70px);margin:10px 15px;background:#fff;border-radius:10px;padding:15px;box-shadow:0 2px 6px rgba(0,0,0,0.1);}
+#messages{flex:1;border:1px solid #ddd;padding:12px;overflow-y:auto;margin-bottom:12px;border-radius:8px;background:#fafafa;}
+.msg{margin-bottom:10px;padding:8px 12px;border-radius:8px;background:#eee;}
+.me{background:#c8f7c5;text-align:right;}
+.system{text-align:center;font-style:italic;color:#666;background:none;}
+.meta{font-size:.75em;color:#666;margin-top:2px;}
+.controls{display:flex;gap:8px;padding-top:6px;}
+.controls input,#privateControls input{padding:10px;border-radius:8px;border:1px solid #ccc;}
+.controls button,#privateControls button{background:#4CAF50;color:#fff;border:none;cursor:pointer;padding:10px 12px;border-radius:8px;}
+img{max-width:200px;border-radius:6px;margin-top:6px;}
+audio{margin-top:6px;width:200px;}
+/* CHAT PRIVADO FULLSCREEN */
+#privateChatFull{
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
   background:#fff;
-  box-shadow:0 4px 12px rgba(0,0,0,.3);
-  border-radius:10px;
-  overflow:hidden;
-  z-index:100;
-  display:flex;
-  flex-direction:column
+  z-index:200;
+  display:none;
+  flex-direction:column;
+  padding:30px; /* padding interno para separar del borde */
+  box-sizing:border-box;
 }
-
-#chatMenuHeader{
+#privateHeader{
   background:#4CAF50;
   color:#fff;
-  padding:10px;
+  padding:12px 15px;
+  font-weight:bold;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  font-weight:bold
-}
-
-#chatUsers{
-  flex:1;
-  overflow-y:auto;
-  padding:8px;
-  background:#f9f9f9
-}
-
-.user-item{
-  padding:6px;
   border-radius:6px;
-  cursor:pointer
+  margin-bottom:15px; /* separación del área de mensajes */
 }
-.user-item:hover{background:#e6f7e6}
-
-#login,#chat{
-  display:flex;
-  flex-direction:column;
-  height:calc(100vh - 70px);
-  margin:10px;
-  background:#fff;
-  border-radius:8px;
-  padding:10px
-}
-#chat{display:none}
-
-#messages{
+#privateMessages{
   flex:1;
-  border:1px solid #ddd;
-  padding:8px;
   overflow-y:auto;
-  margin-bottom:8px
+  padding:15px; /* margen interno de mensajes */
+  background:#f9f9f9;
+  border-radius:8px;
+  margin-bottom:15px; /* separación de los controles */
 }
-
-.msg{margin-bottom:6px;padding:6px 10px;border-radius:6px;background:#eee}
-.me{background:#c8f7c5;text-align:right}
-.system{text-align:center;font-style:italic;color:#666;background:none}
-
-.controls{display:flex;gap:6px}
-input,button{padding:10px;font-size:16px;border-radius:8px}
-button{background:#4CAF50;color:#fff;border:none}
+#privateControls{display:flex;gap:8px;padding-top:8px;}
 </style>
 </head>
-
 <body>
 
 <header>
-  <div id="topMenu">
-    <strong>WilsChat</strong>
-    <div id="chatMenuBtn">Chat Online ▼</div>
-  </div>
+  <strong>WilsChat</strong>
+  <div id="chatMenuBtn">Chat ▼</div>
 </header>
 
-<div id="chatMenuWindow">
-  <div id="chatMenuHeader">
-    Usuarios
-    <button onclick="chatMenuWindow.style.display='none'">✖</button>
-  </div>
-  <div id="chatUsers"></div>
-</div>
+<div id="chatMenuWindow"><div id="usersList"></div></div>
 
 <div id="login">
   <h3>Ingresa tu nombre</h3>
@@ -113,117 +73,172 @@ button{background:#4CAF50;color:#fff;border:none}
 </div>
 
 <div id="chat">
-  <button id="backPublicBtn" style="display:none;margin-bottom:6px">
-    ⬅ Volver al chat público
-  </button>
-
   <div id="messages"></div>
-
   <div class="controls">
-    <input id="text" style="flex:1" placeholder="Mensaje">
+    <input id="text" placeholder="Escribe un mensaje" style="flex:1">
+    <input type="file" id="photoInput" accept="image/*" hidden>
+    <button onclick="photoInput.click()">📷</button>
+    <button id="recordBtn">🎤</button>
     <button id="sendBtn">Enviar</button>
   </div>
 </div>
 
+<!-- CHAT PRIVADO FULLSCREEN -->
+<div id="privateChatFull">
+  <div id="privateHeader">
+    <span id="privateUserName"></span>
+    <button id="closePrivateBtn">✖ Salir</button>
+  </div>
+  <div id="privateMessages"></div>
+  <div id="privateControls">
+    <input id="privateText" placeholder="Escribe un mensaje">
+    <button id="privateSendBtn">Enviar</button>
+  </div>
+</div>
+
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
 <script>
-firebase.initializeApp({
+var firebaseConfig={
   apiKey:"AIzaSyAEkdn1nVDbrJEQY13JrE-peN1JkXrOy24",
-  databaseURL:"https://wilschat-1b27d-default-rtdb.firebaseio.com"
-});
+  authDomain:"wilschat-1b27d.firebaseapp.com",
+  databaseURL:"https://wilschat-1b27d-default-rtdb.firebaseio.com",
+  projectId:"wilschat-1b27d",
+  storageBucket:"wilschat-1b27d.appspot.com",
+  messagingSenderId:"550632985900",
+  appId:"1:550632985900:web:c886e89b4330560b6ac889"
+};
+firebase.initializeApp(firebaseConfig);
 
-var db = firebase.database();
-var user = "";
-var currentChat = "public";
-var privateWith = null;
-var currentRef = null;
+var db=firebase.database();
+var storage=firebase.storage();
+var user="", presenceKey=null, currentRef=null, privateWith=null;
 
-function chatId(a,b){ return [a,b].sort().join("_"); }
+function chatId(a,b){return [a,b].sort().join("_");}
+function time(ts){return new Date(ts).toLocaleTimeString();}
 
-/* ===== LISTENER ===== */
-function listen(ref){
-  if(currentRef) currentRef.off();
-  messages.innerHTML = "";
-  currentRef = ref.limitToLast(200);
-  currentRef.on("child_added",s=>{
-    let m=s.val(); if(!m) return;
-    let d=document.createElement("div");
-    d.className="msg"+(m.user===user?" me":"");
-    d.innerHTML="<strong>"+m.user+":</strong> "+m.text;
+function addMsg(m,container){
+  var div=document.createElement("div");
+  div.className="msg"+(m.user===user?" me":"");
+  if(m.system){div.className+=" system"; div.textContent=m.text+" — "+time(m.ts); container.appendChild(div); return;}
+  div.innerHTML="<strong>"+m.user+":</strong> ";
+  if(m.type==="image"){var i=document.createElement("img"); i.src=m.url; div.appendChild(i);}
+  else if(m.type==="audio"){var a=document.createElement("audio"); a.controls=true; a.src=m.url; div.appendChild(a);}
+  else div.innerHTML+=" "+m.text;
 
-    if(m.user!==user){
-      d.style.cursor="pointer";
-      d.onclick=()=>openPrivateChat(m.user);
-    }
-    messages.appendChild(d);
-    messages.scrollTop=messages.scrollHeight;
-  });
+  var meta=document.createElement("div"); meta.className="meta"; meta.textContent=time(m.ts);
+  div.appendChild(meta);
+
+  if(m.user!==user){div.style.cursor="pointer"; div.onclick=function(){ openPrivateFull(m.user); } }
+  container.appendChild(div); container.scrollTop=container.scrollHeight;
 }
 
-/* ===== CHAT PUBLICO ===== */
-function openPublic(){
-  currentChat="public";
-  privateWith=null;
-  backPublicBtn.style.display="none";
-  listen(db.ref("mensajes"));
-}
-
-/* ===== CHAT PRIVADO ===== */
-function openPrivateChat(name){
-  if(name===user) return;
-  currentChat="private";
-  privateWith=name;
-  backPublicBtn.style.display="block";
-  messages.innerHTML=`<div class="system">Chat privado con ${name}</div>`;
-  listen(db.ref("mensajes_privados/"+chatId(user,name)));
-}
-
-/* ===== LOGIN ===== */
-enterBtn.onclick=()=>{
+/* LOGIN */
+enterBtn.onclick=function(){
+  if(!username.value.trim()) return;
   user=username.value.trim();
-  if(!user) return;
-  login.style.display="none";
-  chat.style.display="flex";
-  chatMenuBtn.style.visibility="visible";
-  db.ref("users/"+user).set({name:user});
-  openPublic();
+  login.style.display="none"; chat.style.display="flex";
+  db.ref("users/"+user).set({name:user,lastSeen:Date.now()});
+  var ref=db.ref("presence").push({name:user}); presenceKey=ref.key; ref.onDisconnect().remove();
+  db.ref("mensajes").push({system:true,text:user+" entró al chat",ts:Date.now()});
+  listenPublic();
 };
 
-/* ===== ENVIAR ===== */
-sendBtn.onclick=()=>{
-  if(!text.value.trim()) return;
-  let data={user:user,text:text.value,ts:Date.now()};
-  if(currentChat==="public"){
-    db.ref("mensajes").push(data);
-  }else{
-    db.ref("mensajes_privados/"+chatId(user,privateWith)).push(data);
-  }
-  text.value="";
+/* CHAT PUBLICO */
+function listenPublic(){
+  if(currentRef) currentRef.off();
+  document.getElementById("messages").innerHTML="";
+  currentRef=db.ref("mensajes").limitToLast(200);
+  currentRef.on("child_added",s=>{if(s.val()) addMsg(s.val(),document.getElementById("messages"));});
+}
+
+/* ENVIAR */
+sendBtn.onclick=function(){
+  let textEl=document.getElementById("text");
+  if(!textEl.value.trim()) return;
+  db.ref("mensajes").push({user:user,text:textEl.value,ts:Date.now()});
+  textEl.value="";
 };
 
-/* ===== BOTON VOLVER ===== */
-backPublicBtn.onclick=()=>openPublic();
+/* FOTOS */
+photoInput.onchange=function(e){
+  var f=e.target.files[0]; if(!f) return;
+  var r=storage.ref("photos/"+Date.now()+f.name);
+  r.put(f).then(s=>s.ref.getDownloadURL().then(u=>{ db.ref("mensajes").push({user:user,type:"image",url:u,ts:Date.now()}); }));
+};
 
-/* ===== USUARIOS ===== */
-db.ref("users").on("value",s=>{
-  chatUsers.innerHTML="";
-  s.forEach(u=>{
-    let d=document.createElement("div");
-    d.className="user-item";
-    d.textContent=u.key;
-    d.onclick=()=>openPrivateChat(u.key);
-    chatUsers.appendChild(d);
+/* AUDIO */
+let rec,chunks=[];
+recordBtn.onclick=async function(){
+  if(!rec||rec.state==="inactive"){
+    var st=await navigator.mediaDevices.getUserMedia({audio:true});
+    rec=new MediaRecorder(st); chunks=[];
+    rec.ondataavailable=e=>chunks.push(e.data);
+    rec.onstop=()=>{
+      var b=new Blob(chunks,{type:"audio/webm"});
+      var r=storage.ref("audios/"+Date.now()+".webm");
+      r.put(b).then(s=>s.ref.getDownloadURL().then(u=>{ db.ref("mensajes").push({user:user,type:"audio",url:u,ts:Date.now()}); }));
+    };
+    rec.start(); this.textContent="⏹️";
+  }else{rec.stop(); this.textContent="🎤";}
+};
+
+/* MENÚ USUARIOS */
+function updateUsers(){
+  Promise.all([db.ref("users").once("value"),db.ref("presence").once("value")]).then(([u,p])=>{
+    var online=[]; p.forEach(c=>online.push(c.val().name));
+    var html="<strong>Conectados:</strong><br>";
+    u.forEach(c=>{
+      var n=c.key;
+      if(online.includes(n)){ html+=`<span class="status online" onclick="openPrivateFull('${n}')">🟢 ${n}</span><br>`; }
+    });
+    html+="<strong>No conectados:</strong><br>";
+    u.forEach(c=>{
+      var n=c.key;
+      if(!online.includes(n)){ html+=`<span class="status offline">⚪ ${n}</span><br>`; }
+    });
+    document.getElementById("usersList").innerHTML=html;
   });
-});
+}
+db.ref("presence").on("value",updateUsers);
+db.ref("users").on("value",updateUsers);
 
-/* ===== MENU ===== */
-chatMenuBtn.onclick=()=>{
-  chatMenuWindow.style.display =
-    chatMenuWindow.style.display==="flex"?"none":"flex";
+/* CHAT PRIVADO FULLSCREEN */
+function openPrivateFull(name){
+  if(name===user) return;
+  privateWith=name;
+  document.getElementById("privateUserName").textContent=name;
+  document.getElementById("privateChatFull").style.display="flex";
+  document.getElementById("privateMessages").innerHTML="";
+  db.ref("mensajes_privados/"+chatId(user,name)).limitToLast(200).on("child_added",s=>{
+    if(s.val()) addMsg(s.val(),document.getElementById("privateMessages"));
+  });
+}
+
+/* ENVIAR PRIVADO */
+document.getElementById("privateSendBtn").onclick=function(){
+  let txt=document.getElementById("privateText");
+  if(!txt.value.trim()||!privateWith) return;
+  db.ref("mensajes_privados/"+chatId(user,privateWith)).push({user:user,text:txt.value,ts:Date.now()});
+  txt.value="";
+}
+
+/* SALIR CHAT PRIVADO */
+document.getElementById("closePrivateBtn").onclick=function(){
+  document.getElementById("privateChatFull").style.display="none";
+  privateWith=null;
+}
+
+/* MENÚ DESPLEGABLE */
+chatMenuBtn.onclick=function(){
+  var w=document.getElementById("chatMenuWindow");
+  w.style.display = w.style.display==="block"?"none":"block";
 };
-</script>
 
+window.addEventListener("beforeunload",()=>{ if(user) db.ref("users/"+user+"/lastSeen").set(Date.now()); });
+</script>
 </body>
 </html>
